Update about page, style tweaks

--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang='en'>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#0b4182">
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
+    <meta charset='utf-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no'>
+    <meta name='theme-color' content='#0b4182'>
+    <meta name='description' content='Visual journalist Daniel Nass creates interactive and data-driven stories.' />
+    <link rel='manifest' href='%PUBLIC_URL%/manifest.json'>
+    <link rel='shortcut icon' href='%PUBLIC_URL%/favicon.png'>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css' />
-    <title>Daniel Nass</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id='root'></div>
   </body>
 </html>
