--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,8 @@
     <meta name='description' content='Visual journalist Daniel Nass creates interactive and data-driven stories.' />
     <link rel='manifest' href='%PUBLIC_URL%/manifest.json'>
     <link rel='shortcut icon' href='%PUBLIC_URL%/favicon.png'>
-    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css' />
   </head>
   <body>
-    <div id='root'></div>
+    <div id='root' class='avenir center-l ph3-l mw8-l mh4-m mh2'></div>
   </body>
 </html>
